vis.3: Use .Er for errno values.

--- a/lib/libc/gen/vis.3
+++ b/lib/libc/gen/vis.3
@@ -179,7 +179,7 @@ and
 functions return \-1 and set
 .Va errno
 to
-.Dv ENOSPC .
+.Er ENOSPC .
 The
 .Fn strenvisx
 function takes an additional argument,
