--- a/sbin/ipfw3/ipfw3.8
+++ b/sbin/ipfw3/ipfw3.8
@@ -1,7 +1,7 @@
 .\"
 .\" $FreeBSD: src/sbin/ipfw/ipfw.8,v 1.63.2.33 2003/02/04 01:36:02 brueffer Exp $
 .\"
-.Dd October 3, 2008
+.Dd Apr 17, 2018
 .Dt IPFW3 8
 .Os
 .Sh NAME
@@ -42,6 +42,17 @@
 .Cm state add rule Ar rulenum proto src:port dst:port Oo state-options Oc
 .Nm
 .Cm state delete Ar rulenum
+.Pp
+.Nm
+.Cm nat Oo Ar rulenum Oc Cm config ip Ar address Oo Ar address Oc
+.Nm
+.Cm nat Oo Ar rulenum Oc Cm show config
+.Nm
+.Cm nat Oo Ar rulenum Oc Cm show state
+.Nm
+.Cm nat Oo Ar rulenum Oc Cm delete
+.Nm
+.Cm nat Oo Ar rulenum Oc Cm flush
 .Pp
 .Nm
 .Brq Cm pipe | queue
@@ -1506,6 +1517,39 @@ diverted to that port.
 If no socket is bound to the destination port, or if the kernel
 wasn't compiled with divert socket support, the packets are
 dropped.
+.Sh NETWORK ADDRESS TRANSLATION (NAT)
+.Nm
+comes with a
+.Cm ipfw3_nat
+module which supports the in-kernel NAT.
+The kernel module
+.Cm ipfw3_nat
+should be loaded before you start the configuration.
+.Pp
+The nat configuration command is the following:
+.Bd -ragged -offset indent
+.Bk -words
+.Cm nat Oo Ar nat_number Oc Cm config ip Ar address Oo Ar address Oc
+.Ek
+.Ed
+.Pp
+More than one address can be configured, and the packet will be translated to these addresses randomly.
+.Bd -ragged -offset indent
+.Bk -words
+.Cm nat Oo Ar nat_number Oc Cm show state
+.Ek
+.Ed
+.Pp
+All the translation records (NAT states) will be displayed in below format.
+.Bd -ragged -offset indent
+.Bk -words
+.Cm nat cpu proto src:port alias:port dst:port direction ttl
+.Ek
+.Ed
+.Pp
+In DragonflyBSD, the sample packets will be always handled by the same CPU. Due to the nature of the network address translation (NAT), the outgoing and returning packets will be handled by another CPU. To ensure the return traffic can be translated back to the original address, the
+.Nm
+will automatically prepare the translation records into the correct CPU.
 .Sh SYSCTL VARIABLES
 A set of
 .Xr sysctl 8
@@ -1898,6 +1942,7 @@ was introduced in Summer 2002.
 .An Alex Nash ,
 .An Archie Cobbs ,
 .An Luigi Rizzo .
+.An Bill Yuan ,
 .Pp
 .An -nosplit
 API based upon code written by
