--- a/share/man/man4/tcp.4
+++ b/share/man/man4/tcp.4
@@ -27,9 +27,8 @@
 .\"
 .\"     From: @(#)tcp.4	8.1 (Berkeley) 6/5/93
 .\" $FreeBSD: src/share/man/man4/tcp.4,v 1.11.2.14 2002/12/29 16:35:38 schweikh Exp $
-.\" $DragonFly: src/share/man/man4/tcp.4,v 1.9 2008/10/17 11:30:24 swildner Exp $
 .\"
-.Dd February 14, 1995
+.Dd April 17, 2018
 .Dt TCP 4
 .Os
 .Sh NAME
@@ -152,31 +151,31 @@ option is set to a non-zero value,
 .Tn TCP
 will delay sending any data at all until either the socket is closed,
 or the internal send buffer is filled.
-.It Dv TCP_SIGNATURE_ENABLE
-This option enables the use of MD5 digests (also known as TCP-MD5)
-on writes to the specified socket.
-In the current release, only outgoing traffic is digested;
-digests on incoming traffic are not verified.
-The current default behavior for the system is to respond to a system
-advertising this option with TCP-MD5; this may change.
-.Pp
-One common use for this in a DragonFlyBSD router deployment is to enable
-based routers to interwork with Cisco equipment at peering points.
-Support for this feature conforms to RFC 2385.
-Only IPv4 (AF_INET) sessions are supported.
-.Pp
-In order for this option to function correctly, it is necessary for the
-administrator to add a tcp-md5 key entry to the system's security
-associations database (SADB) using the
-.Xr setkey 8
-utility.
-This entry must have an SPI of 0x1000 and can therefore only be specified
-on a per-host basis at this time.
-.Pp
-If an SADB entry cannot be found for the destination, the outgoing traffic
-will have an invalid digest option prepended, and the following error message
-will be visible on the system console:
-.Em "tcpsignature_compute: SADB lookup failed for %d.%d.%d.%d" .
+.\".It Dv TCP_SIGNATURE_ENABLE
+.\"This option enables the use of MD5 digests (also known as TCP-MD5)
+.\"on writes to the specified socket.
+.\"In the current release, only outgoing traffic is digested;
+.\"digests on incoming traffic are not verified.
+.\"The current default behavior for the system is to respond to a system
+.\"advertising this option with TCP-MD5; this may change.
+.\".Pp
+.\"One common use for this in a DragonFlyBSD router deployment is to enable
+.\"based routers to interwork with Cisco equipment at peering points.
+.\"Support for this feature conforms to RFC 2385.
+.\"Only IPv4 (AF_INET) sessions are supported.
+.\".Pp
+.\"In order for this option to function correctly, it is necessary for the
+.\"administrator to add a tcp-md5 key entry to the system's security
+.\"associations database (SADB) using the
+.\".Xr setkey 8
+.\"utility.
+.\"This entry must have an SPI of 0x1000 and can therefore only be specified
+.\"on a per-host basis at this time.
+.\".Pp
+.\"If an SADB entry cannot be found for the destination, the outgoing traffic
+.\"will have an invalid digest option prepended, and the following error message
+.\"will be visible on the system console:
+.\".Em "tcpsignature_compute: SADB lookup failed for %d.%d.%d.%d" .
 .It Dv TCP_KEEPINIT
 If a
 .Tn TCP
