--- a/lib/libutil/humanize_number.3
+++ b/lib/libutil/humanize_number.3
@@ -28,7 +28,7 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd December 30, 2016
+.Dd May 5, 2018
 .Dt HUMANIZE_NUMBER 3
 .Os
 .Sh NAME
@@ -215,6 +215,8 @@ The string in
 represented a number that does not fit in
 .Fa result .
 .El
+.Sh SEE ALSO
+.Xr strsuftoll 3
 .Sh STANDARDS
 The
 .Dv HN_DIVISOR_1000
