Add NetBSD's orders(7) manual page.

--- a/lib/libutil/humanize_number.3
+++ b/lib/libutil/humanize_number.3
@@ -216,7 +216,8 @@ represented a number that does not fit in
 .Fa result .
 .El
 .Sh SEE ALSO
-.Xr strsuftoll 3
+.Xr strsuftoll 3 ,
+.Xr orders 7
 .Sh STANDARDS
 The
 .Dv HN_DIVISOR_1000
