Bring in an errno.9 manual page (based on NetBSD's).

--- a/lib/libc/sys/intro.2
+++ b/lib/libc/sys/intro.2
@@ -28,7 +28,7 @@
 .\"     @(#)intro.2	8.5 (Berkeley) 2/27/95
 .\" $FreeBSD: src/lib/libc/sys/intro.2,v 1.48 2007/01/09 00:28:14 imp Exp $
 .\"
-.Dd December 29, 2015
+.Dd May 16, 2018
 .Dt INTRO 2
 .Os
 .Sh NAME
@@ -749,4 +749,5 @@ chosen from the address family in which the socket was created.
 .El
 .Sh SEE ALSO
 .Xr intro 3 ,
-.Xr perror 3
+.Xr perror 3 ,
+.Xr errno 9
