--- a/share/man/man4/ip6.4
+++ b/share/man/man4/ip6.4
@@ -29,7 +29,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd April 21, 2018
+.Dd May 20, 2018
 .Dt IP6 4
 .Os
 .Sh NAME
@@ -384,10 +384,6 @@ the socket option cannot be set to 0 (which will result in returning
 Get or set whether the minimal IPv6 maximum transmission unit (MTU) size
 will be used to avoid fragmentation from occurring for subsequent
 outgoing datagrams.
-.It Dv IPV6_IPCOMP_LEVEL Fa "int *"
-Get or set the
-.Xr ipcomp 4
-level.
 .El
 .Pp
 The
@@ -407,7 +403,7 @@ set to
 and
 .Va cmsg_type
 set to respective option name value (e.g.,
-.Dv IPV6_HOPTLIMIT ) .
+.Dv IPV6_HOPLIMIT ) .
 These options may also be used directly as ancillary
 .Va cmsg_type
 values in
