vm_page_alloc.9: Adjust for the removal of PG_BUSY.

--- a/share/man/man9/vm_page_alloc.9
+++ b/share/man/man9/vm_page_alloc.9
@@ -26,7 +26,7 @@
 .\"
 .\" $FreeBSD: src/share/man/man9/vm_page_alloc.9,v 1.6 2005/06/28 20:15:18 hmp Exp $
 .\"
-.Dd December 19, 2010
+.Dd May 20, 2018
 .Dt VM_PAGE_ALLOC 9
 .Os
 .Sh NAME
@@ -94,8 +94,7 @@ The
 that was allocated is returned if successful; otherwise,
 .Dv NULL
 is returned.
-The returned page will be marked
-.Dv PG_BUSY .
+The returned page will be marked busy.
 .Sh AUTHORS
 This manual page was written by
 .An Chad David Aq Mt davidc@acns.ab.ca .
