{un,}vis.3: Bring back some small fixes we had earlier.

--- a/lib/libc/gen/unvis.3
+++ b/lib/libc/gen/unvis.3
@@ -127,7 +127,7 @@ The
 .Fn unvis
 function has several return codes that must be handled properly.
 They are:
-.Bl -tag -width UNVIS_VALIDPUSH
+.Bl -tag -width ".Dv UNVIS_VALIDPUSH"
 .It Li \&0 No (zero)
 Another character is necessary; nothing has been recognized yet.
 .It Dv UNVIS_VALID
