Fix some it's -> its typos in our manual pages.
Also some minor fixes in rc.conf.5.

--- a/games/hals_end/hals_end.6
+++ b/games/hals_end/hals_end.6
@@ -49,7 +49,7 @@ This option will double the speed of the output.
 .Sh HISTORY
 .Nm
 first appeared in the book "Total Interaction" (ISBN 978-3-7643-7076-3) where
-it's source code and output illustrates the article
+its source code and output illustrates the article
 "Remembering the Future: Memory and Interaction" by Dr. Regine Halter.
 The source code was set in contrast to the graphical artwork "HAL's lifespace"
 by Catherine Walthard.
