--- a/lib/libpuffs/puffs_ops.3
+++ b/lib/libpuffs/puffs_ops.3
@@ -500,7 +500,7 @@ bitmask and return.
 .Pp
 In case this function returns an error,
 .Dv POLLERR
-(or it's
+(or its
 .Xr select 2
 equivalent) will be delivered to the calling process.
 .Pp
