--- a/share/man/man9/ieee80211_crypto.9
+++ b/share/man/man9/ieee80211_crypto.9
@@ -184,8 +184,7 @@ The
 .Nm net80211
 layer will handle allocating cipher and driver resources to support the key.
 .Pp
-Once a key is allocated it's contents can be set using
-.Fn ieee80211_crypto_setkey
+Once a key is allocated it.Fn ieee80211_crypto_setkey
 and deleted with
 .Fn ieee80211_crypto_delkey
 (with any cipher and driver resources reclaimed).
