--- a/share/man/man9/ieee80211_output.9
+++ b/share/man/man9/ieee80211_output.9
@@ -71,7 +71,7 @@ transmit queue.
 Data frames passed down for transmit flow through
 .Nm net80211
 which handles aggregation, 802.11 encapsulation, and then
-dispatches the frames to the driver through it's transmit queue.
+dispatches the frames to the driver through its transmit queue.
 .Pp
 There are two control paths by which frames reach a driver for transmit.
 Data packets are queued to the device's
