--- a/share/man/man9/ieee80211_scan.9
+++ b/share/man/man9/ieee80211_scan.9
@@ -244,7 +244,7 @@ scanning.
 In both cases the scan cache can be checked first and, if it is deemed
 suitably
 .Dq warm
-then it's contents are used without leaving the current channel.
+then its contents are used without leaving the current channel.
 To start a scan without checking the cache
 .Fn ieee80211_start_scan
 can be called; otherwise
