--- a/usr.bin/mt/mt.1
+++ b/usr.bin/mt/mt.1
@@ -141,7 +141,7 @@ considered definitive tape positions).
 Print (and clear) error status information about this device.
 For every normal
 operation (e.g., a read or a write) and every control operation (e.g,, a
-rewind), the driver stores up the last command executed and it's associated
+rewind), the driver stores up the last command executed and its associated
 status and any residual counts (if any). This command retrieves and prints this
 information.
 If possible, this also clears any latched error information.
