--- a/usr.sbin/fdcontrol/fdcontrol.8
+++ b/usr.sbin/fdcontrol/fdcontrol.8
@@ -82,7 +82,7 @@ facility.
 The
 .Nm
 utility is currently under development.
-It's user interface and overall
+Its user interface and overall
 functionality are subjects to future improvements and changes.
 .Sh AUTHORS
 The program has been contributed by
@@ -92,7 +92,7 @@ Dresden.
 The
 .Nm
 utility is currently under development.
-It's user interface is rather
+Its user interface is rather
 silly and likely to change in future, options should be provided to
 allow anything being modified from the command line.
 .Pp
