--- a/README
+++ b/README
@@ -41,6 +41,8 @@ contrib		Packages contributed by 3rd parties.
 
 crypto		Cryptography stuff (see crypto/README).
 
+doc		Documentation for DragonFly BSD.
+
 etc		Template files for /etc.
 
 games		Amusements.
@@ -57,8 +59,6 @@ libexec		System daemons.
 nrelease	Framework for building the ``live'' CD image.
 
 sbin		System commands.
-
-secure		Cryptographic libraries and commands.
 
 share		Shared resources.
 
