--- a/usr.sbin/acpi/acpiexec/acpiexec.8
+++ b/usr.sbin/acpi/acpiexec/acpiexec.8
@@ -28,7 +28,7 @@
 .\" OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd May 11, 2018
+.Dd June 2, 2018
 .Dt ACPIEXEC 8
 .Os
 .Sh NAME
@@ -98,6 +98,8 @@ Set timeout period for AML while loops.
 Display version information.
 .It Fl vd
 Display build date and time.
+.It Fl vh
+Verbose exception handler output.
 .It Fl vi
 Verbose initialization output.
 .It Fl vr
