--- a/share/man/man4/powernow.4
+++ b/share/man/man4/powernow.4
@@ -29,19 +29,19 @@
 .\" OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd October 10, 2014
+.Dd June 4, 2018
 .Dt POWERNOW 4
 .Os
 .Sh NAME
 .Nm powernow
 .Nd PowerNow! Technology support
 .Sh SYNOPSIS
-To compile this driver into the kernel, place the following line in your
-kernel configuration file:
-.Bd -ragged -offset indent
-.Cd "options CPU_ENABLE_POWERNOW"
-.Ed
-.Pp
+.\"To compile this driver into the kernel, place the following line in your
+.\"kernel configuration file:
+.\".Bd -ragged -offset indent
+.\".Cd "options CPU_ENABLE_POWERNOW"
+.\".Ed
+.\".Pp
 To load this driver as a module at boot time, place the following line in
 .Xr loader.conf 5 :
 .Bd -literal -offset indent
