kernel - Fix umtx (pthread_mutex etc) race in kernel
* The umtx code could still race a fork despite the wakeup
  due to certain access paths leading into umtx_sleep() only
  issuing reads, thus not triggering a COW operation post-fork.
  This results in a loss of the interlock.

* Fix the issue by having umtx_sleep() fetch the user data
  with a read-modify-write instead of a read.  It now essentially
  does a lock xadd, adding $0 to the memory to force a write
  fault if necessary.

* Fixes 'go' tests and probably other situations that can arise
  when heavily threaded programs use fork/exec.

Reported-by: Tim Darby (+testing)

--- a/lib/libc/sys/umtx.2
+++ b/lib/libc/sys/umtx.2
@@ -68,6 +68,10 @@ has no specific limitation other than what fits in the signed integer.
 A negative timeout will return
 .Er EINVAL .
 .Pp
+WARNING! In order to properly interlock against fork(), this function will
+do an atomic read-modify-write on the underlying memory by atomically
+adding the value 0 to it.
+.Pp
 The
 .Fn umtx_wakeup
 system call will wakeup the specified number of processes sleeping
@@ -194,7 +198,8 @@ possibly did not match
 .Fa value
 .It Bq Er EWOULDBLOCK
 The specified timeout occurred,
-or a kernel-defined failsafe timeout occurred.
+or a kernel-defined failsafe timeout occurred,
+or the kernel requires a retry due to a copy-on-write / fork operation.
 Callers should not assume that the precise requested timeout occurred
 when this error is returned, and this error can be returned even
 when no timeout is specified.
