libc/xdr: Use standard types.

--- a/lib/libc/xdr/xdr.3
+++ b/lib/libc/xdr/xdr.3
@@ -710,10 +710,10 @@ This routine returns one if it succeeds, zero otherwise.
 .Ft int
 .Xc
 .It Xo
-.Fn xdr_u_int64_t "XDR *xdrs" "u_int64_t *llp"
+.Fn xdr_u_int64_t "XDR *xdrs" "uint64_t *llp"
 .Xc
 A filter primitive that translates between C
-.Vt u_int64_t
+.Vt uint64_t
 integers and their external representations.
 This routine returns one if it succeeds, zero otherwise.
 .Pp
