mount_msdos.8: Fix typo

--- a/sbin/mount_msdos/mount_msdos.8
+++ b/sbin/mount_msdos/mount_msdos.8
@@ -165,7 +165,7 @@ It was rewritten in
 and first appeared in
 .Fx 2.0 .
 .Sh AUTHORS
-Initial implimintation as
+Initial implementation as
 .Nm mount_pcfs
 was written by
 .An -nosplit
