bge.4: Fix a typo.

--- a/share/man/man4/bge.4
+++ b/share/man/man4/bge.4
@@ -174,7 +174,7 @@ driver supports
 .Xr polling 4 .
 .Sh LOADER TUNABLES
 .Bl -tag -width indent
-.It Va hw.iwn.msi.enable
+.It Va hw.bge.msi.enable
 By default, the driver will use MSI if it is supported.
 This behavior can be turned off by setting this tunable to 0.
 .It Va hw.bge.fake_autoneg
